--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "solochain-template-runtime"
-description = "A solochain runtime template built with Substrate, part of Polkadot Sdk."
+name = "telurean-chain-runtime"
+description = "Telurean Chain runtime."
 version = "0.1.0"
 license = "Unlicense"
 authors.workspace = true
