--- a/pallets/hvc/Cargo.toml
+++ b/pallets/hvc/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "pallet-template"
-description = "FRAME pallet template for defining custom runtime logic."
-version = "0.1.0"
+name = "pallet-hvc"
+description = "Human-Validated Consensus pallet."
+version = "0.1.0-dev"
 license = "Unlicense"
 authors.workspace = true
 homepage.workspace = true
