NFT hierarchy pallet added.

--- a/pallets/nft-hierarchy/Cargo.toml
+++ b/pallets/nft-hierarchy/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "pallet-hvc"
+name = "pallet-nft-hierarchy"
 description = "Human-Validated Consensus pallet."
 version = "0.1.0-dev"
 license = "Unlicense"
