Metadata pallet added.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -73,6 +73,7 @@ sp-transaction-pool = { version = "36.0.0", default-features = false }
 sp-version = { version = "39.0.0", default-features = false }
 substrate-wasm-builder = { version = "26.0.1", default-features = false }
 pallet-nft-hierarchy = { version = "0.1.0-dev", default-features = false, path = "pallets/nft-hierarchy"}
+pallet-metadata = { version = "0.1.0-dev", default-features = false, path = "pallets/metadata"}
 
 [profile.release]
 opt-level = 3
