--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -26,6 +26,7 @@ pallet-aura.workspace = true
 pallet-balances.workspace = true
 pallet-grandpa.workspace = true
 pallet-nft-hierarchy.workspace = true
+pallet-metadata.workspace = true
 pallet-sudo.workspace = true
 pallet-template.workspace = true
 pallet-timestamp.workspace = true
@@ -67,6 +68,7 @@ std = [
 	"pallet-balances/std",
 	"pallet-grandpa/std",
     "pallet-nft-hierarchy/std",
+    "pallet-metadata/std",
 	"pallet-sudo/std",
 	"pallet-template/std",
 	"pallet-timestamp/std",
