Logic of metadata added to pallet.

--- a/pallets/nft-metadata/Cargo.toml
+++ b/pallets/nft-metadata/Cargo.toml
@@ -18,6 +18,7 @@ frame-benchmarking = { optional = true, workspace = true }
 frame-support.workspace = true
 frame-system.workspace = true
 scale-info = { features = ["derive"], workspace = true }
+pallet-uniques.workspace = true
 
 [dev-dependencies]
 sp-core = { default-features = true, workspace = true }
@@ -32,6 +33,7 @@ std = [
 	"frame-support/std",
 	"frame-system/std",
 	"scale-info/std",
+    "pallet-uniques/std",
 ]
 runtime-benchmarks = [
 	"frame-benchmarking/runtime-benchmarks",
