--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "telurean-chain-runtime"
 description = "Telurean Chain runtime."
-version = "0.1.0"
+version = "0.1.0-dev"
 license = "Unlicense"
 authors.workspace = true
 homepage.workspace = true
@@ -28,7 +28,6 @@ pallet-grandpa.workspace = true
 pallet-nft-hierarchy.workspace = true
 pallet-nft-attributes.workspace = true
 pallet-sudo.workspace = true
-pallet-template.workspace = true
 pallet-timestamp.workspace = true
 pallet-transaction-payment-rpc-runtime-api.workspace = true
 pallet-transaction-payment.workspace = true
@@ -71,7 +70,6 @@ std = [
     "pallet-nft-hierarchy/std",
     "pallet-nft-attributes/std",
 	"pallet-sudo/std",
-	"pallet-template/std",
 	"pallet-timestamp/std",
 	"pallet-transaction-payment-rpc-runtime-api/std",
 	"pallet-transaction-payment/std",
@@ -103,9 +101,10 @@ runtime-benchmarks = [
 	"pallet-balances/runtime-benchmarks",
 	"pallet-grandpa/runtime-benchmarks",
 	"pallet-sudo/runtime-benchmarks",
-	"pallet-template/runtime-benchmarks",
 	"pallet-timestamp/runtime-benchmarks",
 	"pallet-transaction-payment/runtime-benchmarks",
+	"pallet-nft-attributes/runtime-benchmarks",
+	"pallet-nft-hierarchy/runtime-benchmarks",
 	"sp-runtime/runtime-benchmarks",
 ]
 
@@ -118,9 +117,10 @@ try-runtime = [
 	"pallet-balances/try-runtime",
 	"pallet-grandpa/try-runtime",
 	"pallet-sudo/try-runtime",
-	"pallet-template/try-runtime",
 	"pallet-timestamp/try-runtime",
 	"pallet-transaction-payment/try-runtime",
+	"pallet-nft-attributes/try-runtime",
+	"pallet-nft-hierarchy/try-runtime",
 	"sp-runtime/try-runtime",
 ]
 
