--- a/pallets/nft-attributes/Cargo.toml
+++ b/pallets/nft-attributes/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "pallet-nft-attributes"
-description = "FRAME pallet template for defining custom runtime logic."
-version = "0.1.0"
+description = "Management of NFT attributes."
+version = "0.1.0-dev"
 license = "Unlicense"
 authors.workspace = true
 homepage.workspace = true
