--- a/pallets/nft-hierarchy/Cargo.toml
+++ b/pallets/nft-hierarchy/Cargo.toml
@@ -18,6 +18,7 @@ frame-benchmarking = { optional = true, workspace = true }
 frame-support.workspace = true
 frame-system.workspace = true
 pallet-uniques.workspace = true
+pallet-balances.workspace = true
 scale-info = { features = ["derive"], workspace = true }
 
 [dev-dependencies]
