--- a/pallets/nft-hierarchy/Cargo.toml
+++ b/pallets/nft-hierarchy/Cargo.toml
@@ -20,6 +20,7 @@ frame-system.workspace = true
 pallet-uniques.workspace = true
 pallet-balances.workspace = true
 scale-info = { features = ["derive"], workspace = true }
+sp-std.workspace = true
 
 [dev-dependencies]
 sp-core = { default-features = true, workspace = true }
@@ -35,6 +36,7 @@ std = [
 	"frame-system/std",
     "pallet-uniques/std",
 	"scale-info/std",
+    "sp-std/std",
 ]
 runtime-benchmarks = [
 	"frame-benchmarking/runtime-benchmarks",
