--- a/pallets/nft-hierarchy/Cargo.toml
+++ b/pallets/nft-hierarchy/Cargo.toml
@@ -21,11 +21,11 @@ pallet-uniques.workspace = true
 pallet-balances.workspace = true
 scale-info = { features = ["derive"], workspace = true }
 sp-std.workspace = true
+sp-runtime.workspace = true
 
 [dev-dependencies]
 sp-core = { default-features = true, workspace = true }
 sp-io = { default-features = true, workspace = true }
-sp-runtime = { default-features = true, workspace = true }
 
 [features]
 default = ["std"]
