--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -52,6 +52,12 @@ sp-version = { features = ["serde"], workspace = true }
 [build-dependencies]
 substrate-wasm-builder = { optional = true, workspace = true, default-features = true }
 
+[profile.dev]
+opt-level = 0
+debug = 2
+debug-assertions = true
+overflow-checks = true
+
 [features]
 default = ["std"]
 std = [
